--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,8 @@
   <meta name="apple-mobile-web-app-title" content="google_maps_in_flutter">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAd0XBtWdukvvZqjeh9_ymoZZXvl1IqMao"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
